--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
         "psr/http-client": "^1.0",
         "nyholm/psr7": "^1.3",
         "symfony/filesystem": "^5.1",
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "symfony/dependency-injection": "^5.1",
+        "symfony/config": "^5.1",
+        "symfony/yaml": "^5.1"
     },
     "autoload": {
         "psr-4": {
